--- a/.gitignore
+++ b/.gitignore
@@ -128,5 +128,14 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-#VScode
+# VScode
 .vscode/
+
+# .xml
+*.xml
+
+# .db
+*.db
+
+# .DS_Store
+.DS_Store
